--- a/people_CN.html
+++ b/people_CN.html
@@ -63,7 +63,7 @@
     <hr style="width: 60%;">
     <div class="middle">            
         <img src="images/pyl.jpg" class="image" style="text-align: center;width: 13%;">
-        <h1>Yiwen Wang</h1>
+        <h1>彭艳玲</h1>
         <br>
         <p>Yanling Peng is a Research Associate from the AGIS in Prof.
             Yongfeng Zhou’s lab. Before joining this lab, she did a PhD at Martin-Luther-University Halle-Wittenberg and a postdoc in AGIS. She completed her bachelor’s and master’s degree from Lanzhou University. 
