--- a/people.html
+++ b/people.html
@@ -219,7 +219,7 @@
             <p>Shuo Cao is an intern student in the lab. He graduated from North China University of Science and Technology majoring in biological information. Good at sequence alignment and programming.</p>
         </div>
         <div class="LP">
-            <img src="images/cc.JPG" class="image">
+            <img src="images/ljc.jpg" class="image">
             <h1>Jiacui Li</h1>
             <br>
             <p>Jiacui Li is an intern student in the lab. She graduated from South China Agricultural University majoring in Horticulture. Good at analysis and programming.</p>
